# gpx-tools

./: .flake8  DESIGN.md  README.md  pyproject.toml  requirements.txt  stravad.config.example  stravad.py
.github/: check_commit.py
.github/workflows/: check-title.yml  codeql-analysis.yml  lint.yml
docker/: Dockerfile  Dockerfile.testing  compose.yml
fitmap/: __init__.py  activity.py  cli.py  filters.py  fit.py  palette.py  render.py  util.py
tests/: test_activity.py  test_filters.py  test_fit.py  test_palette.py  test_stravad.py
