[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gpx-tools"
version = "0.1.0"
description = "Small local tools for GPX, FIT, and activity data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2",
    "fitdecode>=0.10",
    "folium>=0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
fitmap = "fitmap.cli:main"

[tool.setuptools.packages.find]
include = ["fitmap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

